fix: z-index between cartwidget and error

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,7 +100,7 @@ li {
   margin: 10px auto;
   text-align: center;
   font-size: 48px;
-  z-index: 40;
+  z-index: 50;
   top: 40vh;
   width: 100%;
   position: fixed;
